# pinhole-calibration

./: Camera-Calibration-Theory-justinblaber.org.html  Cargo.toml  camera_model_and_jacobian.html  camera_model_and_jacobian.ipynb  problem.json  sympy_tutorial.html  sympy_tutorial.ipynb
src/: calibrate.py  calibrate.rs  calibrator.rs  detect.rs  detect_harris.rs  gui.rs  lib.rs  lm.rs  main.rs  optimize.rs  optimize_with_lm.rs
src/py_impl/: calibrate.py  computeM.py
