[package]
name = "pinhole-calibration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = "0.8.1"
argmin-math = { version = "0.3", features = ["nalgebra_v0_32-serde"] }
nalgebra = "0.32.2"
opencv = "0.78.2"
serde_json = "1.0.95"
